--- a/payment/kubernetes/deployment.yaml
+++ b/payment/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: payment
-          image: username/payment:latest
+          image: hyunjunghh/payment:1.0
           ports:
             - containerPort: 8080
           readinessProbe:
